2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_04

* Update MANIFEST file to ensure all correct files are included in release

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_03

* Fix silly type in code/tests

2010-06-19 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_02

* Add in bugtracker and homepage resources to Build.PL file
* Bring new module App::ClusterSSH::Host into play for parsing host strings
* Patch to override font used on command line (Roland Rosenfeld)
* Put options in cssh pod into alphabetical order

2010-01-08 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_01

* Remove GNU tools and switch to Perl module layout using Module::Build

0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.29 - unreleased

* Handle hostnames containing % properly (Debian bug  543368)
- Thanks to Tony Mancill for the patch

2009-12-19 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.28

* Look for usernames when adding clusters
- Thanks to Kristian Lyngstol for the patch
* Allow username@cluster to override all usernames in the cluster
* Account for multiple host definitions within ssh configuration file
- Thanks to anonymous for the patch
* Allow for long line continuation in config files with a backslash
- Thanks to Mike Loseke for the patch
* Improve binary search to 
  - ignore directories of the same name, and 
  - always search for the binary if it is not fully qualified
- Thanks to Ian Marsh for the patch
* Always use the given host name, not the resolved host name, when opening the ssh connection (Debian bug 533406)

2009-09-24 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.27

* Add in list of clusters to 'Add Host' window 
  - thanks for Stanislas Rouvelin for the idea
* Fix bug where unresolvable host stopped program running
  - thanks to Sami Kerola
* Add in config for auto-tearoff of send and host menus
  - thanks to James Chernikov for the idea
* Add in send menu xml definition file