@@ -1,0 +1,25 @@
+# Note: this file was auto-generated by Module::Build::Compat version 0.3603
+use ExtUtils::MakeMaker;
+WriteMakefile
+(
+          'NAME' => 'App::ClusterSSH',
+          'VERSION_FROM' => 'lib/App/ClusterSSH.pm',
+          'PREREQ_PM' => {
+                           'Locale::Maketext' => 0,
+                           'Test::Pod' => 0,
+                           'Test::Pod::Coverage' => 0,
+                           'Test::Trap' => 0,
+                           'Tk' => '800.022',
+                           'X11::Protocol' => '0.56',
+                           'version' => '0'
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [
+                           'bin/crsh',
+                           'bin/cscp',
+                           'bin/cssh',
+                           'bin/ctel'
+                         ],
+          'PL_FILES' => {}
+        )
+;
