@@ -1,3 +1,11 @@
+????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_05
+
+* Tidy up pod for whatis errors
+* Amend copyright years and text to be consistent
+* Include missing buld prereq (Test::Trap)
+* Correct '--font, -f' in cssh documentation
+- Thanks to Tony Mancill for reporting these errors
+
 2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_04
 
 * Update MANIFEST file to ensure all correct files are included in release
